--- a/foodexpress.scss
+++ b/foodexpress.scss
@@ -1,3 +1,504 @@
+@import "node_modules/bootstrap/scss/functions";
+@import "node_modules/bootstrap/scss/variables";
+@import "node_modules/bootstrap/scss/mixins";
+
+// @import "node_modules/bootstrap/scss/root";
+@import "node_modules/bootstrap/scss/reboot";
+// @import "node_modules/bootstrap/scss/type";
+@import "node_modules/bootstrap/scss/images";
+// @import "node_modules/bootstrap/scss/helpers";
+// @import "node_modules/bootstrap/scss/containers";
+// @import "node_modules/bootstrap/scss/grid";
+@import "node_modules/bootstrap/scss/bootstrap-grid";
+
+// @import "node_modules/aos/src/sass/aos";
+
+/*!
+*
+*
+* Powered by ..::BERNETHE::..
+* @bernethe <bernethe@gmail.com>
+*
+*
+*/
+
+$_purple: #503E9D;
+$_yellow: #FCD661;
+$_gray: #F0F0F0;
+
+@mixin xlink {
+	&, &:link, &:active, &:hover, &:visited {@content;}
+}
+@mixin placeholder {
+	&::-webkit-input-placeholder {@content;}
+	&:-moz-placeholder           {@content;}
+	&::-moz-placeholder          {@content;}
+	&:-ms-input-placeholder      {@content;}
+}
+
 body, html {
 	font-family: 'Lato', sans-serif;
+	background-color: #fff;
+	scroll-behavior: smooth;
+}
+*:focus {
+	outline: none;
+}
+footer {
+	background-color: $_purple;
+	margin-top: 1em;
+	text-align: center;
+	color: #fff;
+	font-size: .85em;
+	padding: 1em 0;
+
+	@include media-breakpoint-down(md) {
+		font-size: .65em;
+	}
+
+	& a {
+		@include xlink {
+			color: #fff;
+			font-weight: bold;
+			text-decoration: none;
+			color: $_yellow;
+		}
+		&:hover {
+			text-decoration: underline;
+		}
+	}
+}
+img.img-fluid {
+	width: 100%;
+	height: auto;
+}
+// .text-right {text-align: right;}
+#togglerSidebar {
+	appearance: none;
+	width: calc( 3em + 4px );
+	height: calc( 3em + 4px );
+	position: fixed;
+	top: 45px;
+	right: 0px;
+	z-index: 101;
+	background: #E1E1E1;
+	border: none;
+	border-radius: 50% 0 0 50%;
+	transition: all .5s ease-in-out;
+
+	& figure {
+		color: #666;
+		content: '';
+		background: #fff;
+		width: 3em;
+		height: 3em;
+		border-radius: 50%;
+		position: absolute;
+		left: 2px;
+		top: 2px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+
+	& svg {
+		width: 1.5em;
+		height: 1.5em;
+		z-index: 102;
+		fill: currentColor;
+
+		&:nth-child(2) {
+			display: none;
+		}
+	}
+	& .toggler-sidebar-badget {
+		position: absolute;
+		background-color: $_yellow;
+		font-weight: bold;
+		font-size: .85em;
+		color: $_purple;
+		width: 1.5em;
+		left: -5px;
+		top: -5px;
+		border-radius: 50%;
+		z-index: 102;
+	}
+
+	&.opened {
+		border-radius: 50%;
+		right: 300px;
+
+		& .toggler-sidebar-badget {
+			display: none;
+		}
+
+		& svg {
+			&:nth-child(1) {
+				display: none;
+			}
+			&:nth-child(2) {
+				display: inline;
+			}
+		}
+	}
+
+}
+.main-head-bar {
+	display: grid;
+    grid-template-columns: 225px auto;
+    gap: 30px;
+	align-items: center;
+
+	& input {
+		appearance: none;
+		background-color: #F0F0F0;
+		border: none;
+		border-radius: 8px;
+		padding: .75em .75em .75em 3em;
+		background-image: url(img/search.svg);
+		background-repeat: no-repeat;
+		background-position: 1em center;
+		background-size: 1em 1em;
+
+		@include placeholder {
+			color: rgba(#000, .65);
+		}
+	}
+
+	@include media-breakpoint-down(sm) {
+		grid-template-columns: 130px auto;
+		gap: 15px;
+
+		& input {
+			font-size: .85em;
+		}
+	}
+}
+.main-banner {
+	overflow: hidden;
+	max-height: 100vh;
+	transition: all .5s ease-in-out;
+
+	&.b-hide {
+		max-height: 0;
+	}
+}
+.home-info {
+	& h2 {
+		font-weight: bold;
+	}
+
+	& .home-info-widget {
+		text-align: right;
+
+		& .widget-delivery-time {
+			background-color: $_yellow;
+			display: inline-block;
+			font-size: .85em;
+			padding: .5em 1em;
+			border-radius: 2em;
+
+			& svg, & img {
+				width: 1em;
+				height: 1em;
+				margin-top: -.1em;
+				fill: #000;
+				margin-right: .5em;
+			}
+		}
+	}
+}
+.cat-sel {
+	text-align: center;
+	height: 120px;
+	overflow: auto;
+	margin: .5em 0 2em 0;
+
+	& ul {
+		display: block;
+		min-width: 750px;
+
+		&, & li {
+			padding: 0;
+			margin: 0;
+			list-style: none;
+			
+		}
+
+		& li {
+			width: calc( 75px + 1em);
+			display: inline-block;
+
+			& label {
+				width: 75px;
+				text-align: center;
+				display: block;
+				background-color: $_gray;
+				cursor: pointer;
+				padding: 5px;
+				border-radius: 35px;
+				margin: 0 .5em;
+				transition: all .25s ease-in-out;
+
+				& figure {
+					background-color: #fff;
+					width: 60px;
+					height: 60px;
+					margin: auto;
+					border-radius: 50%;
+					display: flex;
+					justify-content: center;
+					align-items: center;
+
+					& svg {
+						width: 38px;
+						height: 38px;
+						transition: all .25s ease-in-out;
+					}
+				}
+				& span {
+					display: inline-block;
+					margin: .5em auto 1.5em auto;
+					font-size: .85em;
+					font-weight: 900;
+				}
+
+				&:hover {
+					& figure {
+						& svg {
+							transform: scale(1.05);
+						}
+					}
+				}
+			}
+			& input {
+				display: none;
+				&:checked {
+					& + label {
+						background-color: $_yellow;
+
+						& figure {
+							& svg {
+								fill: $_purple;
+								transform: scale(1.05);
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+}
+#rest_items {
+	display: grid;
+	grid-template-columns: 33.3333% 33.3333% 33.3333%;
+	grid-gap: 30px;
+
+	@include media-breakpoint-down(md) {
+		display: block;
+	}
+}
+a.rest-item {
+	color: inherit;
+	text-decoration: none;
+	display: block;
+
+	@include xlink {
+		margin: 1em 0;
+
+		& figure {
+			width: 100%;
+			overflow: hidden;
+			border-radius: .75em;
+
+			& img {
+				width: 100%;
+				transition: all .25s ease-in-out;
+			}
+		}
+
+		& svg {
+			display: inline-block;
+			width: 1.2em;
+			height: 1.2em;
+			fill: #000;
+		}
+
+		& .rest-item-score {
+			font-weight: bold;
+			padding-left: .5em;
+		}
+		& .rest-item-cat {
+			color: #A7A7A7;
+			padding-left: .5em;
+		}
+		& .rest-item-cost {
+			text-align: right;
+			color: #A7A7A7;
+			font-weight: bold;
+		}
+	}
+
+	&:hover {
+		& figure {
+			& img {
+				transform: scale(1.1);
+			}
+		}
+	}
+}
+.sidebar {
+	max-width: 380px;
+	width: 80vw;
+	height: 100vh;
+	padding: 0 2em;
+	background-color: #F8F8F8;
+	border-left: 1px solid #E1E1E1;
+	position: fixed;
+	right: -380px;
+	top: 0;
+	z-index: 100;
+	transition: all .5s ease-in-out;
+
+	&.opened {
+		right: 0;
+	}
+
+	& h2 { font-weight: bold; }
+
+	& .sidebar-content {
+		height: 100vh;
+		overflow: auto;
+	}
+
+	& .sidebar-head {
+		text-align: right;
+
+		& svg{
+			width: 2em;
+			height: 2em;
+		}
+		& .sidebar-head-badget {
+			background-color: $_yellow;
+			padding: 1em 0;
+			width: 3em;
+			text-align: center;
+			border-radius: 5px;
+			margin-left: .5em;
+			display: inline-block;
+		}
+	}
+
+	& .sidebar-head-dt {
+		color: #fff;
+		background-color: $_purple;
+		padding: 2em;
+		border-radius: 5px;
+		font-size: .85em;
+
+		& figure {
+			background-color: rgba(#fff, .25);
+			border-radius: 5px;
+			width: 2em;
+			height: 2em;
+			display: inline-block;
+			text-align: center;
+
+			& svg {
+				width: 1em;
+				height: 1em;
+				fill: #fff;
+			}
+		}
+
+		& a {
+			@include xlink {
+				color: $_yellow;
+				text-decoration: none;
+			}
+			&:hover {
+				text-decoration: underline;
+			}
+		}
+
+		& .sidebar-head-dt-a {
+			text-align: right;
+		}
+	}
+
+	& .sidebar-head-items {
+		font-size: .85em;
+
+		& .row {
+			margin: 1em 0;
+			& div {
+				display: flex;
+				align-items: center;
+			}
+			& div:nth-child(1) {
+				& img {
+					width: 100%;
+					height: auto;
+					border-radius: 5px;
+				}
+				& figure {
+					background: $_yellow;
+					width: 100%;
+					border-radius: 5px;
+
+					& svg {
+						fill: $_purple;
+						width: 100%;
+						height: 40px;
+					}
+				}
+			}
+			& div:nth-child(3) {
+				text-align: right;
+				font-weight: bold;
+				color: #707070;
+			}
+		}
+	}
+
+	& .sidebar-head-total {
+		font-weight: bold;
+		& div:nth-child(2) {
+			text-align: right;
+			font-size: 1.25em;
+		}
+	}
+
+	& hr {
+		border: none;
+		border-bottom: 1px solid rgba(#000, .15);
+	}
+}
+a.checkout-btn {
+	@include xlink {
+		background-color: $_yellow;
+		color: #000;
+		display: block;
+		font-weight: bold;
+		font-size: 1.5em;
+		text-decoration: none;
+		padding: .75em 1em;
+		border-radius: 5px;
+		position: relative;
+
+		& svg {
+			color: currentColor;
+			height: 1.25em;
+			width: 1.25em;
+			position: absolute;
+			top: calc( 50% - 0.625em );
+			right: 25px;
+			transition: all .25s ease-in-out;
+		}
+	}
+	&:hover {
+		& svg {
+			right: 15px;
+		}
+	}
 }
